# crops_manipulator_vision

./: CMakeLists.txt  README.md  package.xml
include/: Aligner.h  ClusterExtractor.h  FruitDetector.h  VisionInterface.h  types.h
src/: AlignFruit.cpp  Aligner.cpp  ClusterExtractor.cpp  Clusterizer.cpp  ColorFilter.cpp  ColorFilter2D.cpp  ColorFilter3D.cpp  CropWorkspace.cpp  FruitDetector.cpp  HSVFilter.hpp  PointCloudTransformer.cpp  Segmenter.cpp  StemDetector.cpp  TFBroadcaster.cpp  TFListener.cpp  VisionInterface.cpp  fruit_detector_main.cpp  interface.cpp
