<package>
  <name>crops_manipulator_vision</name>
  <version>0.1.0</version>
  <description>Vision sub-module to paprikas</description>
  <maintainer email="sahand.yousefpour@tum.de">Sahand Yousefpour</maintainer>
  <maintainer email="test@test.com">C. Schuetz</maintainer>
  <maintainer email="test@test.com">TUM</maintainer>

  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/manipulator_gui</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>

</package>
